[package]
name = "imgui-win32"
version = "0.1.0"
edition = "2021"
description = "Win32 input handler for imgui-rs"
repository = "https://github.com/0xFounders/imgui-win32"
homepage = "https://github.com/0xFounders/imgui-win32"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winerror", "winuser", "wincon", "windef"] }
thiserror = "1.0.32"
imgui = "0.8.2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]